Basic saving of reminders works. Implement deleting in ReminderTabeleVC and proceed with Location.

--- a/ProximityReminders/Info.plist
+++ b/ProximityReminders/Info.plist
@@ -51,5 +51,13 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSLocationUsageDescription</key>
+	<string>We need your location data.</string>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>Please allow access to your location, even when the app is not running.</string>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>location</string>
+	</array>
 </dict>
 </plist>
